<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_text_2"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="20:00"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_hour_weather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_time"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_weather_hour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_background"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/layout_weather_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:id="@+id/image_weather_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    tools:background="@drawable/forecast_day_sunny"
                    android:tint="@color/dark_icon_1"
                    tools:backgroundTint="@color/dark_icon_1"/>

                <TextView
                    android:id="@+id/text_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_text_1"
                    android:textSize="56sp"
                    tools:text="26\u00B0C"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_temp_feel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_text_2"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/layout_weather_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Feels like 24\u00B0C"/>

            <TextView
                android:id="@+id/text_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_text_2"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/text_temp_feel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Mostly Cloudy"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_details"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="16dp"
                android:background="@color/dark_item_background"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@color/dark_item_background">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/image_rain_drop"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/ic_wi_raindrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:backgroundTint="@color/dark_icon_1"/>

                        <TextView
                            android:id="@+id/text_rain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rain"
                            android:textSize="24sp"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image_rain_drop"/>

                        <TextView
                            android:id="@+id/text_rain_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="6 mm"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/dark_text_2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/image_wind_speed"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/forecast_windy"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:backgroundTint="@color/dark_icon_1"/>

                        <TextView
                            android:id="@+id/text_wind_speed_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textSize="24sp"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image_wind_speed"/>

                        <TextView
                            android:id="@+id/text_wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="4 m/s"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/dark_text_2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/image_wind_direction"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/ic_wi_wind_deg"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:backgroundTint="@color/dark_icon_1"/>

                        <TextView
                            android:id="@+id/text_wind_direction_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_deg"
                            android:textSize="24sp"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image_wind_direction"/>

                        <TextView
                            android:id="@+id/text_wind_direction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="NE"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/dark_text_2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/image_cloud_coverage"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/ic_wi_cloud"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:backgroundTint="@color/dark_icon_1"/>

                        <TextView
                            android:id="@+id/text_cloud_coverage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cloud_coverage"
                            android:textSize="24sp"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/image_cloud_coverage"/>

                        <TextView
                            android:id="@+id/text_cloud_coverage_pct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/dark_text_1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="16%"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>